# ManajemenPorto_PT-Dahana

./: .gitignore  README.md  count_neraca.py  docker-compose.yml  inspect_cf.py  inspect_cf_raw.py  inspect_dic_r1.py  inspect_kan_r1.py  inspect_kan_r1_safe.py  inspect_neraca.py  inspect_sheets.py  test.js  test_db.py  test_parser.py  test_supabase.py  tmp.js
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  run_parser.py  test_ekuitas_dic.py  test_ekuitas_kan.py  test_komposisi_kan.py  test_parser.py  test_parser_kan.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/routes/: charts.py  extract.py  progress.py  upload.py
backend/app/core/: config.py  security.py
backend/app/models/: chart.py  upload.py
backend/app/parsers/: base_parser.py  kurva_s_parser.py  laba_rugi_parser.py  normalizer.py  portofolio_parser.py  validators.py
backend/app/services/: storage_service.py  supabase_service.py
backend/tests/test_parsers/: test_normalizer.py
docs/: 00_overview_arsitektur.md  01_setup_environment.md  02_supabase_database_auth.md  03_backend_fastapi.md  04_frontend_foundation.md  05_modul_pengembangan_usaha.md  06_modul_manajemen_portofolio.md  07_mesin_ekstraksi_excel.md  08_sistem_visualisasi.md  09_realtime_kolaborasi.md  10_testing_qa.md  11_deployment_cicd.md  README.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
supabase/: config.toml  seed.sql
supabase/migrations/: 20240101000001_user_profiles.sql  20240101000002_project_berjalan.sql  (+11 more)
(+69 files in other folders)
